# Xiaoheixia_Joystick

./: LICENSE  README.md
src/joystick/lv_xiaoheixia/: .clang-format  .ycm_extra_conf.py  CMakeLists.txt  build.sh  tags
src/joystick/lv_xiaoheixia/cmake/: toolchainfile-rv1106.cmake
src/joystick/lv_xiaoheixia/lv_fb/: lv_drv_conf.h
src/joystick/lv_xiaoheixia/lv_fb/lvgl/demos/music/: tags
src/joystick/lv_xiaoheixia/src/: main.c
src/lv_xiaoheixia/lv_fb/: lv_conf.h
src/server/: server.py
